--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
+        "axios": "1.6.0",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.7.22",
+        "momentum-modal": "^0.2.2",
+        "sweetalert2": "^11.11.0"
     }
 }
